# ShowCharacter

./: .gitignore  CMakeLists.txt  README.md
lib/: ABC 3x5.piskel
src/: letter_defs.h  main.cpp  spritesheet_handling.cpp  spritesheet_handling.h  typedefs.h
